corrected some styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Portfolio</title>
+  <title>Porfolio By Óscar Medina</title>
 </head>
 <body>
      <div class="img-header">
